--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-token_main=<insert your bot token here>
-#https://realpython.com/how-to-make-a-discord-bot-python/
+token_main = 'ODA5NDkxODQyNjIxNTA1NjA3.GA520g.UmKCmRa_262yx91wucq3MIKaP7-09utOTLQHZ4'
