--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-token_main = 'ODA5NDkxODQyNjIxNTA1NjA3.GA520g.UmKCmRa_262yx91wucq3MIKaP7-09utOTLQHZ4'
+token_main = 'ODA5NDkxODQyNjIxNTA1NjA3.G0i8HU.wXeLYDOVbTNCcitr8K9mEZOi4Oo7DUZOuZtxiE'
