--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-C:\Users\malak\Desktop\MuddyBot\MuddyBot - Stable\.env
-C:\Users\malak\Desktop\MuddyBot\MuddyBot - Stable\Start Main Bot.bat
+.env
+"Start Main Bot.bat"
